--- a/eclipseCon2014/org.eclipse.e4.examples.di.presentation/index.html
+++ b/eclipseCon2014/org.eclipse.e4.examples.di.presentation/index.html
@@ -37,7 +37,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Xtreme Eclipse4: A tutorial on advanced usages of the Eclipse4 platform</h1>
+					<h1>Xtreme Eclipse4</h1>
+					<h3>A tutorial on advanced usages of the Eclipse4 platform</h1>
 					<h3>Customizing dependency injection behavior with custom annotations</h3>
 					<p>
 						<small>Created by <a href="http://http://pweclipse.blogspot.com">Paul Webster</a> / <a href="http://twitter.com/paulweb515">@paulweb515</a></small>
@@ -50,11 +51,24 @@
 						<li>Is tied to the runtime <code>IEclipseContext</code> hierarchy</li>
 						<li>Can access both data and services</li>
 						<li>As data changes the fields or methods are updated</li>
+						<li>DI is applied to POJOs instantiated by the system (Parts, Processors, Addons)</li>
+						<li><code>ContextInjectionFactory</code> can use DI to instantiate an object</li>
+						<li>DI shouldn't be used with handler objects</li>
 					</ol>
+				</section>
 
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
+				<section>
+					<h2>Eclipse core.di Example</h2>
+<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
+IEclipseContext localContext = EclipseContextFactory.create();
+localContext.set("b", "123"); // local values override
+localContext.set("bConstructor", "123Constructor");
+localContext.set("c", "xyz");
+
+TestClass testObject = ContextInjectionFactory.make(TestClass.class,
+        parentContext, localContext);
+
+</code></pre>
 				</section>
 
 				<section>
